<resources>

    android:text=""

    <string name="media_library_is_empty">Ваша медиатека пуста</string>

    <string name="no_playlist_created">Вы не создали \n ни одного плейлиста</string>

    <string name="new_playlist">Новый плейлист</string>
    <string name="selected_tracks">Избранные треки</string>
    <string name="play_lists">Плейлисты</string>

    <string name="media_library">Медиатека</string>
    <string name="app_name">PlayListMaker</string>

    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="offerYandex">"https://yandex.ru/legal/practicum_offer"</string>
    <string name="offerPracticum">"https://practicum.yandex.ru/android-developer"</string>
    <string name="emailAddr">"newmanaccount@yandex.ru</string>
    <string name="emailSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="emailBody">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="hint">Поиск</string>
    <string name="refresh">Обновить</string>
    <string name="searchFailed">Ничего не нашлось</string>
    <string name="connectionFaied">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="searchHistory">Вы искали</string>
    <string name="clearSearchHistory">Очистить историю</string>

    <string name="time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="time_hint">time</string>
    <string name="album_hint">album</string>
    <string name="year_hint">year</string>
    <string name="genre_hint">genre</string>
    <string name="country_hint">country</string>

    <string name="nothing_found">Ничего не найдено.</string>
    <string name="connection_failed">Проблема с сетью.</string>"
    <string name="unknown_error">Неизвестная ошибка.</string>">
    <string name="default_play_time">00:00</string>

    <string name="error_playlist_exists">Плейлист с именем "%1$s" уже существует</string>
    <string name="playlist_created_successfully">Плейлист "%1$s" успешно создан</string>

    <string name="unsaved_changes">Завершить создание плейлиста?</string>
    <string name="sure_to_leave">Все несохраненные данные будут потеряны</string>
    <string name="to_stay">Отмена</string>
    <string name="to_leave">Завершить</string>

    <string name="track_word_form1">треков</string>
    <string name="track_word_form2">трек</string>
    <string name="track_word_form3">трека</string>

    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>

    <string name="playlist_name">playlist name</string>
    <string name="playlist_description">playlist description</string>

    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="tracks_list_description">Список треков</string>
    <string name="tracks">Треки</string>
    <string name="name_hint">name</string>
    <string name="track_name_hint">trackName</string>
    <string name="artist_name_hint">artist_name</string>
    <string name="description_hint">description</string>
    <string name="duration_hint">duration</string>
    <string name="tracks_number_hint">tracks number</string>
    <string name="error_message_hint">error message</string>
    <string name="playlist_doesnt_contain_tracks">Данный плейлист пока не содержит треков</string>
    <string name="track_to_be_deleted">Удаление трека</string>
    <string name="shall_the_track_be_deleted">Хотите удалить трек?</string>
    <string name="YES">ДА</string>
    <string name="NO">НЕТ</string>

    <string name="playlist_deleting">Удаление плейлиста</string>
    <string name="sure_to_delete_the_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="cancel">Отмена</string>
    <string name="proceed_deleting">Удалить</string>
    <string name="playlist_no_tracks_to_share">В плейлисте нет треков для отправки</string>

    <string name="no_name">Без названия</string>
    <string name="no_description">Без описания</string>

    <string name="playlist">Плейлист: %1$s</string>
    <string name="description2">Описание: %1$s</string>
    <string name="tracks_count">Количество треков: %1$s</string>
    <string name="share_the_playlist">Поделиться плейлистом</string>

</resources>
