<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_dual_color_background"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbarStyle"
        app:navigationIcon="@drawable/arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarTitleTextStyle"
        app:titleTextColor="@color/dual_color" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/padding_settings"
        android:paddingVertical="@dimen/padding_settings"
        android:text="@string/dark_theme"
        android:textColor="@color/dual_color"
        android:textSize="@dimen/text_size_16"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <TextView
        android:id="@+id/shareApp"
        style="@style/TextStyle"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:id="@+id/messageToSupport"
        style="@style/TextStyle"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:id="@+id/agreement"
        style="@style/TextStyle"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/arrow_right" />

</LinearLayout>
