<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/padding_app"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/ToolbarTitleTextStyle"
    />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_marginBottom="10dp"
        android:text="@string/search"
        app:cornerRadius="@dimen/corners"
        app:icon="@drawable/search"
        app:iconTint="@color/black"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPadding"
        style="@style/ButtonStyle"
    />

    <Button
        android:id="@+id/buttonMedia"
        android:layout_marginBottom="10dp"
        android:text="@string/media"
        app:cornerRadius="@dimen/corners"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPadding"
        app:iconTint="@color/black"
        style="@style/ButtonStyle"
    />

    <Button
        android:id="@+id/buttonSettings"
        android:text="@string/settings"
        app:cornerRadius="@dimen/corners"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPadding"
        app:iconTint="@color/black"
        style="@style/ButtonStyle"
    />

</LinearLayout>
