<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/settings"
        app:titleTextColor="@android:color/black" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/padding_settings"
        android:paddingVertical="@dimen/padding_settings"
        android:text="@string/dark_theme"
        android:textColor="@color/black"
        android:textSize="@dimen/secondary_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:paddingHorizontal="@dimen/padding_settings"
        android:paddingVertical="@dimen/padding_settings"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="@dimen/secondary_text_size"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:paddingHorizontal="@dimen/padding_settings"
        android:paddingVertical="@dimen/padding_settings"
        android:text="@string/support"
        android:textColor="@color/black"
        android:textSize="@dimen/secondary_text_size"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:paddingHorizontal="@dimen/padding_settings"
        android:paddingVertical="@dimen/padding_settings"
        android:text="@string/user_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/secondary_text_size"
        app:drawableEndCompat="@drawable/arrow_right" />

</LinearLayout>
