<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/audio_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dual_color4"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbarStyle"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/ToolbarTitleTextStyle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/track_name"
        tools:srcCompat="@drawable/place_holder2"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        />

    <TextView
        android:id="@+id/track_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/ys_display_medium"
        android:hint="@string/track_name_hint"
        android:textColor="@color/dual_color"
        android:textSize="@dimen/text_size_22"
        app:layout_constraintBottom_toTopOf="@id/artist_name"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:hint="@string/artist_name_hint"
        android:textColor="@color/dual_color"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toTopOf="@id/playbackButton"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        />

    <ImageView
        android:id="@+id/favoritesImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_to_the_edge"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/favorites_button_unselected"
        app:layout_constraintBottom_toBottomOf="@id/playbackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/playbackButton" />

    <com.example.playlistmaker.player.ui.PlaybackButtonView
        android:id="@+id/playbackButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="4dp"
        app:playIcon="@drawable/play_button"
        app:pauseIcon="@drawable/pause_button_light"
        app:layout_constraintBottom_toTopOf="@id/playing_time"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder" />

    <ImageView
        android:id="@+id/add_to_playlist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_to_the_edge"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/add_to_playlist_button"
        app:layout_constraintBottom_toBottomOf="@id/playbackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/playbackButton" />

    <TextView
        android:id="@+id/playing_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/dual_color"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toTopOf="@id/track_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/default_play_time"
        />

    <TextView
        android:id="@+id/track_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/time"
        android:text="@string/time"
        android:textColor="@color/dual_color"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintStart_toStartOf="@id/leftBorder"

        />

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/album"
        android:text="@string/album"
        android:textColor="@color/dual_color"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/year"
        android:text="@string/year"
        android:textColor="@color/dual_color"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:hint="@string/genre"
        android:text="@string/genre"
        android:textColor="@color/dual_color"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/country"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_to_the_bottom_edge"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="start"
        android:hint="@string/country"
        android:text="@string/country"
        android:textColor="@color/dual_color"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        />

    <TextView
        android:id="@+id/track_time_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="end"
        android:hint="@string/time_hint"
        android:textColor="@color/dual_color"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toEndOf="@+id/track_time"
        app:layout_constraintTop_toTopOf="@+id/track_time"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        />

    <TextView
        android:id="@+id/album_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="end"
        android:hint="@string/album_hint"
        android:textColor="@color/dual_color"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintStart_toEndOf="@+id/album"
        app:layout_constraintTop_toTopOf="@+id/album"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        />

    <TextView
        android:id="@+id/year_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="end"
        android:hint="@string/year_hint"
        android:textColor="@color/dual_color"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@id/genre_value"
        app:layout_constraintStart_toEndOf="@+id/year"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        />

    <TextView
        android:id="@+id/genre_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="end"
        android:hint="@string/genre_hint"
        android:textColor="@color/dual_color"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/country_value"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@+id/genre"
        />

    <TextView
        android:id="@+id/country_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_to_the_bottom_edge"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="end"
        android:hint="@string/country_hint"
        android:textColor="@color/dual_color"
        android:textSize="13sp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@+id/country"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
