<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/padding_app">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:textSize="@dimen/primary_text_size"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="@dimen/buttonTextSize"
        app:cornerRadius="@dimen/corners"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPadding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/buttonMedia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/media"
        android:textColor="@color/black"
        android:textSize="@dimen/buttonTextSize"
        app:cornerRadius="@dimen/corners"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPadding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/buttonTextSize"
        app:cornerRadius="@dimen/corners"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPadding"
        app:iconTint="@color/black" />

</LinearLayout>
