<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbarStyle"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/ToolbarTitleTextStyle"
        app:titleTextColor="@color/black"

        />

    <FrameLayout
        android:id="@+id/picture_selecting_button"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_gravity="center"
        android:background="@drawable/dashed_border">

        <ImageView
            android:id="@+id/playlist_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/add_image" />
    </FrameLayout>


    <EditText
        android:id="@+id/new_playlist_name"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/name"
        android:padding="12dp"
        android:textColor="@color/dual_color"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/new_playlist_description"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/description"
        android:padding="12dp"
        android:textColor="@color/dual_color"
        android:textColorHint="@color/grey"

        />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create_playlist"
        style="@style/MyButtonStyle"
        android:layout_width="326dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="20dp"
        android:enabled="false"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_16"

        />

</LinearLayout>
